--- a/views/addNoteForm.handlebars
+++ b/views/addNoteForm.handlebars
@@ -1,9 +1,9 @@
 
-<form action="/addNote" method="post">
+<form action="/addNote" method="post" style="width: 30rem;">
   <div class="form-group">
     <input type="text" name="id" value={{id}} hidden>
     <label for="comments">Comments</label>
-    <input type="text" class="form-control" name="comments" >
+    <textarea type="text" class="form-control" name="comments" rows="3"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
   <a href="/">Cancel</a>
