--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -1,5 +1,5 @@
 {{#each news}}
-    <article>
+    <article class="card" style="width: 30rem;">
         <button class="addArticle" data-link="{{link}}" data-title="{{title}}">Add Article</button>
         <span>{{title}}</span>
         <a href="{{link}}">link</a>
